--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
   <ul>
     <li><a href="member-resources.html">Member Resources</a></li>
     <li><a href="leadership-resources.html">Leadership Resources</a></li>
+    <li><a href="leadership-resourcesV2.html">Leadership Resources (V2)</a></li>
     <li><a href="privacy.html">Privacy & Security</a></li>
     <!-- Add more links or sections as needed -->
   </ul>
