--- a/privacy.html
+++ b/privacy.html
@@ -1,4 +1,6 @@
 <div style="font-family:Arial,sans-serif; line-height:1.6; margin:auto; max-width:800px">
+<div style="background-color:#004080; color:#ffffff; margin-bottom:20px; padding:10px 20px; text-align:center"><a href="https://acfusa.elvanto.net/pages/member-resources" style="color:#ffffff; font-weight:bold; text-decoration:none">&larr; Back to Member Resources </a></div>
+
 <h1>ACFUSA Elvanto Privacy Policy</h1>
 
 <p><strong>Effective Date:</strong> July 29, 2025</p>
